--- a/ProjectGenius-Frontend/package.json
+++ b/ProjectGenius-Frontend/package.json
@@ -14,6 +14,7 @@
     "is-empty": "^1.2.0",
     "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
+    "react-alert-confirm": "^4.1.8",
     "react-bootstrap": "^2.9.0",
     "react-date-picker": "^10.5.1",
     "react-datepicker": "^4.20.0",
