--- a/ProjectGenius-Frontend/package.json
+++ b/ProjectGenius-Frontend/package.json
@@ -22,9 +22,11 @@
     "react-dom": "^18.2.0",
     "react-fontawesome-svg-icon": "^1.1.2",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
+    "react-spinners": "^0.13.8",
     "react-step-progress-bar": "^1.0.3",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
