--- a/ProjectGenius-Frontend/package.json
+++ b/ProjectGenius-Frontend/package.json
@@ -36,6 +36,7 @@
     "react-step-progress-bar": "^1.0.3",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
