--- a/ProjectGenius-Frontend/package.json
+++ b/ProjectGenius-Frontend/package.json
@@ -35,6 +35,7 @@
     "react-spinners": "^0.13.8",
     "react-step-progress-bar": "^1.0.3",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.10.4",
     "styled-components": "^6.1.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
